--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,4 +1,4 @@
-<section class="header">
+<article class="header clearfix">
   <div class="header__logo">
     <img src="assets/ball.jpg">
   </div>
@@ -7,51 +7,47 @@
   </div>
   <div class="header__list">
     <ul>
-      <li><a href="#" class="square_btn">Home</a></li>
-      <li><a href="#" class="square_btn">News</a></li>
-      <li><a href="#" class="square_btn">Game</a></li>
-      <li><a href="#" class="square_btn">Member</a></li>
+      <li><a href="#" class="square_btn">HOME</a></li>
+      <li><a href="#" class="square_btn">NEWS</a></li>
+      <li><a href="#" class="square_btn">GAME</a></li>
+      <li><a href="#" class="square_btn">MEMBER</a></li>
     </ul>
   </div>
-</section>
+</article>
 
-<section class="contents">
-  <div class="contents__image">
-  </div>
+<article class="contents">
+  <div class="contents__main"></div>
   <div class="contents__title">
     Inpulse
   </div>
-  <div class="contents__sentence">
+  <div class="contents__title-sub">
     ~The Official Web Site~
   </div>
-
-  <div class="contents-left">
-    <p>News</p>
-    <table class="contents__line">
-      <tr class="contents__arrow">
+  <div class="contents__news">
+    <h1>News</h1>
+    <table class="contents__list">
+      <tr>
         <th>日にち</th>
         <th>ニュース</th>
       </tr>
       <tr>
         <td>2015/02/23</td>
-        <td>コメントコメントコメントコメント</td>
-      </tr>
-      <tr>
-        <td>2015/01/23</td>
         <td>コメントコメントコメント</td>
       </tr>
       <tr>
-        <td>2015/01/17</td>
+        <td>2015/01/23</td>
         <td>コメントコメント</td>
+      </tr>
+      <tr>
+        <td>2015/01/17</td>
+        <td>コメント</td>
       </tr>
     </table>
   </div>
 
-  <div class="contents-right">
-    <div class="box26">
-    <span class="box-title">紹介</span>
-    <p>コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント</p>
-    </div>
+  <div class="contents__introduce">
+    <h1>紹介</h1>
+    <p>コメント</p>
   </div>
-</section>
+</article>
 
