--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,4 +1,4 @@
-<article class="header clearfix">
+<header class="clearfix">
   <div class="header__logo">
     <img src="assets/ball.jpg">
   </div>
@@ -13,19 +13,23 @@
       <li><a href="#" class="square_btn">MEMBER</a></li>
     </ul>
   </div>
-</article>
+</header>
 
-<article class="contents">
+<section class="contents">
   <div class="contents__main"></div>
   <div class="contents__title">
     Inpulse
   </div>
-  <div class="contents__title-sub">
+  <div class="contents__subtitle">
     ~The Official Web Site~
   </div>
-  <div class="contents__news">
+</section>
+
+<article class="news">
+  <div class="news__title">
     <h1>News</h1>
-    <table class="contents__list">
+  </div>
+    <table class="news__list">
       <tr>
         <th>日にち</th>
         <th>ニュース</th>
@@ -43,11 +47,15 @@
         <td>コメント</td>
       </tr>
     </table>
-  </div>
+</article>
 
-  <div class="contents__introduce">
+  <section class="introduce">
+  <div class="introduce__title">
     <h1>紹介</h1>
+  </div>
+  <div class="introduce__comment">
     <p>コメント</p>
   </div>
-</article>
+  </section>
+
 
