--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -15,47 +15,48 @@
   </div>
 </header>
 
-<section class="contents">
-  <div class="contents__main"></div>
-  <div class="contents__title">
-    Inpulse
-  </div>
-  <div class="contents__subtitle">
-    ~The Official Web Site~
-  </div>
-</section>
-
-<article class="news">
-  <div class="news__title">
-    <h1>News</h1>
-  </div>
-    <table class="news__list">
-      <tr>
-        <th>日にち</th>
-        <th>ニュース</th>
-      </tr>
-      <tr>
-        <td>2015/02/23</td>
-        <td>コメントコメントコメント</td>
-      </tr>
-      <tr>
-        <td>2015/01/23</td>
-        <td>コメントコメント</td>
-      </tr>
-      <tr>
-        <td>2015/01/17</td>
-        <td>コメント</td>
-      </tr>
-    </table>
-</article>
-
-  <section class="introduce">
-  <div class="introduce__title">
-    <h1>紹介</h1>
-  </div>
-  <div class="introduce__comment">
-    <p>コメント</p>
-  </div>
+  <section class="contents">
+    <div class="title-wrapper">
+      <div class="contents__title">
+        Inpulse
+      </div>
+      <div class="contents__subtitle">
+        ~The Official Web Site~
+      </div>
+    </div>
   </section>
 
+<div class="clearfix">
+  <article class="news">
+    <div class="news__title">
+      <h1>News</h1>
+    </div>
+      <table class="news__list">
+        <tr>
+          <th>日にち</th>
+          <th>ニュース</th>
+        </tr>
+        <tr>
+          <td>2015/02/23</td>
+          <td>コメントコメントコメント</td>
+        </tr>
+        <tr>
+          <td>2015/01/23</td>
+          <td>コメントコメント</td>
+        </tr>
+        <tr>
+          <td>2015/01/17</td>
+          <td>コメント</td>
+        </tr>
+      </table>
+  </article>
 
+  <section class="introduce">
+    <div class="introduce__title">
+      <h1>紹介</h1>
+    </div>
+    <div class="introduce__comment">
+      <p>コメントコメントコメントコメント</p>
+    </div>
+  </section>
+</div>
