--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -1,7 +1,9 @@
 body{
   color: orange;
   background-color: navy;
-}
+  height: 100%;
+  text-align: center;
+
   .header__logo{
     float: left;
   }
@@ -32,9 +34,7 @@ body{
   li a{
     color: inherit;
   }
-// .square_btn{
-//   text-decoration: none;
-// }
+
 .square_btn:hover{
   font-size: 30px;
   text-decoration: none;
@@ -47,60 +47,52 @@ body{
 }
 
 .contents{
-  height: 600px;
-  &__main{
+    height: 600px;
     background-image: url("/assets/sign.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
-    top: 150px;
-    left: 0;
-    width: 100%;
-    height: 500px;
-  }
-  &__title{
     position: relative;
-    width:300px;
+    width: 100%;
+  &__title{
     top: 150px;
-    left: 55%;
     font-size: 100px;
     font-family: impact;
-    transform:rotate(-10deg);
   }
   &__subtitle{
-    position: relative;
-    width: 400px;
     top: 170px;
-    left: 55%;
     font-size: 30px;
+  }
+  .title-wrapper{
+    position: absolute;
+    top:200px;
+    right: 50px;
+    width: 390px;
     transform:rotate(-10deg);
   }
 }
 
 .news{
   float: left;
-  width: 50%;
-  margin-left: 80px;
+  margin: 30px;
   font-size: 20px;
   &__title{
-    padding-left: 120px;
-    width: 80px;
+    text-align: center;
     text-decoration:underline;
   }
   td{
     text-align: center;
+    letter-spacing:2px;
   }
 }
 
 .introduce{
-  float: left;
+  margin:30px;
   font-size: 20px;
-  text-align: center;
+  float: left;
   &__title{
-    padding-left: 50px;
-    width: 80px;
+    text-align: center;
     text-decoration:underline;
   }
 }
-
+}
 
