--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -32,23 +32,28 @@
       <h1>News</h1>
     </div>
       <table class="news__list">
-        <tr>
-          <th>日にち</th>
-          <th>ニュース</th>
-        </tr>
-        <tr>
-          <td>2015/02/23</td>
-          <td>コメントコメントコメント</td>
-        </tr>
-        <tr>
-          <td>2015/01/23</td>
-          <td>コメントコメント</td>
-        </tr>
-        <tr>
-          <td>2015/01/17</td>
-          <td>コメント</td>
-        </tr>
+        <thead>
+          <tr>
+            <th>日にち</th>
+            <th>ニュース</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2015/02/23</td>
+            <td>コメントコメントコメント</td>
+          </tr>
+          <tr>
+            <td>2015/01/23</td>
+            <td>コメントコメント</td>
+          </tr>
+          <tr>
+            <td>2015/01/17</td>
+            <td>コメントコメント</td>
+          </tr>
+        </tbody>
       </table>
+
   </article>
 
   <section class="introduce">
@@ -56,7 +61,7 @@
       <h1>紹介</h1>
     </div>
     <div class="introduce__comment">
-      <p>コメントコメントコメントコメント</p>
+      <p>コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント</p>
     </div>
   </section>
 </div>
