--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -54,12 +54,10 @@ body{
     position: relative;
     width: 100%;
   &__title{
-    top: 150px;
     font-size: 100px;
     font-family: impact;
   }
   &__subtitle{
-    top: 170px;
     font-size: 30px;
   }
   .title-wrapper{
@@ -73,22 +71,26 @@ body{
 
 .news{
   float: left;
-  margin: 30px;
+  padding: 30px;
   font-size: 20px;
+  width: 50%;
+  box-sizing:border-box;
   &__title{
     text-align: center;
     text-decoration:underline;
   }
   td{
     text-align: center;
-    letter-spacing:2px;
+    letter-spacing:1px;
   }
 }
 
 .introduce{
-  margin:30px;
+  padding: 30px;
+  box-sizing:border-box;
   font-size: 20px;
   float: left;
+  width: 50%;
   &__title{
     text-align: center;
     text-decoration:underline;
