--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,16 +1,23 @@
 <header class="clearfix">
-  <div class="header__logo">
-    <img src="assets/ball.jpg">
-  </div>
-  <div class="header__title">
-    Inpulse
-  </div>
+    <div class="header__logo">
+      <img src="assets/ball.jpg">
+    </div>
+    <div class="header__title">
+      Inpulse
+    </div>
   <div class="header__list">
     <ul>
-      <li><a href="#" class="square_btn">HOME</a></li>
-      <li><a href="#" class="square_btn">NEWS</a></li>
-      <li><a href="#" class="square_btn">GAME</a></li>
-      <li><a href="#" class="square_btn">MEMBER</a></li>
+      <li><a href="#" class="square_btn hidden-on-sp">HOME</a></li>
+      <li><a href="#" class="square_btn hidden-on-sp">NEWS</a></li>
+      <li><a href="#" class="square_btn hidden-on-sp" >GAME</a></li>
+      <li><a href="#" class="square_btn hidden-on-sp">MEMBER</a></li>
+      <li class="show-on-sp"><img src="assets/menu-tab.png"></li>
+    </ul>
+    <ul>
+      <li><a href="#" class="square_btn show-on-sp">HOME</a></li>
+      <li><a href="#" class="square_btn show-on-sp">NEWS</a></li>
+      <li><a href="#" class="square_btn show-on-sp">GAME</a></li>
+      <li><a href="#" class="square_btn show-on-sp">MEMBER</a></li>
     </ul>
   </div>
 </header>
@@ -26,7 +33,7 @@
     </div>
   </section>
 
-<div class="clearfix">
+<div class= "clearfix">
   <article class="news">
     <div class="news__title">
       <h1>News</h1>
