--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -5,21 +5,27 @@
     <div class="header__title">
       Inpulse
     </div>
-  <div class="header__list">
-    <ul>
-      <li><a href="#" class="square_btn hidden-on-sp">HOME</a></li>
-      <li><a href="#" class="square_btn hidden-on-sp">NEWS</a></li>
-      <li><a href="#" class="square_btn hidden-on-sp" >GAME</a></li>
-      <li><a href="#" class="square_btn hidden-on-sp">MEMBER</a></li>
-      <li class="show-on-sp"><img src="assets/menu-tab.png"></li>
+  <nav>
+    <ul class="header__list">
+      <li><a href="#" class="square_btn">HOME</a></li>
+      <li><a href="#" class="square_btn">NEWS</a></li>
+      <li><a href="#" class="square_btn">GAME</a></li>
+      <li><a href="#" class="square_btn">MEMBER</a></li>
     </ul>
-    <ul>
-      <li><a href="#" class="square_btn show-on-sp">HOME</a></li>
-      <li><a href="#" class="square_btn show-on-sp">NEWS</a></li>
-      <li><a href="#" class="square_btn show-on-sp">GAME</a></li>
-      <li><a href="#" class="square_btn show-on-sp">MEMBER</a></li>
-    </ul>
+  </nav>
+
+  <div class="humberger-menu">
+    <a href="#"><img src="/assets/menu-aicon.png" class="menu-btn"></a>
   </div>
+  <!-- <nav>
+    <ul class="header__list show-on-sp">
+      <li><a href="#" class="square_btn">HOME</a></li>
+      <li><a href="#" class="square_btn">NEWS</a></li>
+      <li><a href="#" class="square_btn">GAME</a></li>
+      <li><a href="#" class="square_btn">MEMBER</a></li>
+    </ul>
+  </nav> -->
+
 </header>
 
   <section class="contents">
@@ -72,3 +78,4 @@
     </div>
   </section>
 </div>
+
