--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,11 +1,14 @@
-<header class="clearfix">
+<header class="clearfix" id="clearfix">
     <div class="header__logo">
       <img src="assets/ball.jpg">
     </div>
     <div class="header__title">
       Inpulse
     </div>
-  <nav>
+    <div class="navToggle">
+      <span></span><span></span><span></span><span>menu</span>
+    </div>
+  <nav class="global-nav">
     <ul class="header__list">
       <li><a href="#" class="square_btn">HOME</a></li>
       <li><a href="#" class="square_btn">NEWS</a></li>
@@ -14,9 +17,9 @@
     </ul>
   </nav>
 
-  <div class="humberger-menu">
+  <!-- <div id="humberger-menu">
     <a href="#"><img src="/assets/menu-aicon.png" class="menu-btn"></a>
-  </div>
+  </div> -->
   <!-- <nav>
     <ul class="header__list show-on-sp">
       <li><a href="#" class="square_btn">HOME</a></li>
@@ -25,7 +28,6 @@
       <li><a href="#" class="square_btn">MEMBER</a></li>
     </ul>
   </nav> -->
-
 </header>
 
   <section class="contents">
