--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -44,7 +44,7 @@ body{
   clear: both;
 }
 
-.humberger-menu{
+#humberger-menu{
   display: none;
 }
   /* スマホ用CSS header*/
@@ -57,26 +57,116 @@ body{
       font-size: 3rem;
       margin: 10px;
     }
+    .global-nav{
+      position: fixed;
+      z-index: 2;
+      top:0;
+      left: 0;
+      background:orange;
+      color: #000;
+      text-align: center;
+      transform:translateY(-100%);
+      transition:all 0.6s;
+      width: 100%;
+    }
     .header__list{
       float: none;
       display: none;
       height: 100px;
+      background:#ccc;
+      margin: 0 auto;
+      padding: 0;
+      width: 100%;
     }
-    .humberger-menu {
+    .header__list li{
+      font-size: 1.1em;
+      list-style-type: none;
+      padding: 0;
+      width: 100%;
+      border-bottom: 1px dotted #333;
+    }
+    .header__list li:last-child{
+      padding-bottom: 0;
+      border-bottom: none;
+    }
+    .header__list li a{
       display: block;
-    img{
-      float: right;
-      width: 50px;
-      height: 50px;
+      color: #000;
+      padding: 1em 0;
+    }
+    .global-nav.active{
+      transform:translateY(0%);
+    }
+
+    .navToggle{
+      display: block;
       position: absolute;
       top: 20px;
       right: 10px;
+      width: 45px;
+      height: 51px;
+      cursor: pointer;
+      z-index: 3;
+      background:#ff8856;
+      text-align: center;
     }
-  }
-  .menu-btn:hover{
-    cursor: pointer;
-    opacity: 0.6;
-  }
+    .navToggle span{
+      display: block;
+      position: absolute;
+      width: 30px;
+      border-bottom: solid 3px #eee;
+      -webkit-transition: .35s ease-in-out;
+      -moz-transition: .35s ease-in-out;
+      transition: .35s ease-in-out;
+      left: 6px;
+
+    &:nth-child(1){
+      top: 9px;
+    }
+    &:nth-child(2){
+      top: 18px;
+    }
+    &:nth-child(3){
+      top: 27px;
+    }
+    &:nth-child(4){
+      border:none;
+      color: #eee;
+      font-size: 9px;
+      font-weight: bold;
+      top: 34px;
+    }
+    }
+    .navToggle.active span:nth-child(1){
+      top: 18px;
+      left: 6px;
+      -webkit-transform:rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      transform:rotate(-45deg);
+    }
+    .navToggle.active span:nth-child(2),
+    .navToggle.active span:nth-child(3){
+      top: 18px;
+      -webkit-transform:rotate(45deg);
+      -moz-transform: rotate(45deg);
+      transform:rotate(45deg);
+    }
+
+  //   #humberger-menu {
+  //     display: block;
+  //   img{
+  //     float: right;
+  //     width: 50px;
+  //     height: 50px;
+  //     position: absolute;
+  //     top: 20px;
+  //     right: 10px;
+  //   }
+  // }
+  // .menu-btn:hover{
+  //   cursor: pointer;
+  //   opacity: 0.6;
+  // }
   }
   /* header END*/
 
