--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -5,10 +5,10 @@
     <div class="header__title">
       Inpulse
     </div>
-    <div class="navToggle">
-      <span></span><span></span><span></span><span>menu</span>
+    <div class="humberger-menu-buttom">
+      <img src="assets/menu-aicon.png">
     </div>
-  <nav class="global-nav">
+  <nav>
     <ul class="header__list">
       <li><a href="#" class="square_btn">HOME</a></li>
       <li><a href="#" class="square_btn">NEWS</a></li>
@@ -17,17 +17,17 @@
     </ul>
   </nav>
 
-  <!-- <div id="humberger-menu">
-    <a href="#"><img src="/assets/menu-aicon.png" class="menu-btn"></a>
-  </div> -->
-  <!-- <nav>
-    <ul class="header__list show-on-sp">
+  <nav class="global-navigation">
+    <ul class="global-navigation-list">
+      <div class="global-navigation-close-buttom">
+        <img src="assets/menu-close.png">
+      </div>
       <li><a href="#" class="square_btn">HOME</a></li>
       <li><a href="#" class="square_btn">NEWS</a></li>
       <li><a href="#" class="square_btn">GAME</a></li>
       <li><a href="#" class="square_btn">MEMBER</a></li>
     </ul>
-  </nav> -->
+  </nav>
 </header>
 
   <section class="contents">
