--- a/app/assets/stylesheets/inpulse.scss
+++ b/app/assets/stylesheets/inpulse.scss
@@ -1,117 +1,183 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
 body{
   color: orange;
   background-color: navy;
   height: 100%;
-
-  .header__logo{
-    float: left;
-  img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-  }
 }
-  .header__title{
-    float: left;
-    font-size: 4rem;
-    font-family: impact;
-    margin: 15px;
+
+.header{
+  width: 100%;
+  height: 100px;
+  &-sentence{
+    margin: 10px;
   }
-  .header__list{
+  &__logo{
+    float: left;
+    // margin: 10px;
+    img{
+      width: 70px;
+      height: 70px;
+      border-radius: 50px;
+    }
+  }
+  &__title{
+    float: left;
+    font-size: 3rem;
+    font-family: impact;
+    padding: 10px;
+  }
+  &__list{
     float:right;
     list-style: none;
   }
-
   li{
     float: left;
-    margin: 20px 0 0 0;
+    margin: 30px 0 0 0;
     padding-right: 30px;
-    font-size: 25px;
+    font-size: 20px;
     color: orange;
   }
   li a{
     color: inherit;
   }
+}
+  .square_btn:hover{
+    font-size: 25px;
+    text-decoration: none;
+  }
 
-.square_btn:hover{
-  font-size: 30px;
-  text-decoration: none;
-}
+  .clearfix:after{
+    content: "";
+    display: block;
+    clear: both;
+  }
+  .humberger-menu-buttom{
+    display: none;
+  }
+  .global-navigation{
+    display: none;
+  }
+  .humberger-menu{
+    display: none;
+  }
 
-.clearfix:after{
-  content: "";
-  display: block;
-  clear: both;
-}
-.humberger-menu-buttom{
-  display: none;
-}
-.global-navigation{
-  display: none;
-}
-.humberger-menu{
-  display: none;
-}
-        /* スマホ用CSS header*/
-        @media screen and ( max-width:767px ){
-          .header__logo img{
-            width: 70px;
-            height: 70px;
-          }
-          .header__title{
-            font-size: 3rem;
-            margin: 10px;
-          }
-          .header__list{
-            float: none;
-            display: none;
-            height: 100px;
-          }
-          .humberger-menu-buttom {
-            display: block;
-          img{
-            float: right;
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            top: 20px;
-            right: 10px;
-          }
-        }
-          .global-navigation{
-        position: fixed;
-        display: block;
-        z-index: 9999;
-        top: 0;
-        left: 0;
-        background-color:skyblue;
-        transform:translateY(-100%);
-        transition:0.6s;
-        width: 100%;
-        &-list{
-          position: relative;
-          height: 100vh;
-          padding: 15% 10%;
-          li{
-            font-size: 1.2em;
-            text-align: center;
-            margin-top: 20px;
-            list-style: none;
-            padding-bottom: 15px;
-            width: 100%;
-            border-bottom: 1px solid #333;
-          }
-        }
-        &-close-buttom{
-          position: absolute;
-          top: 20px;
-          right: 10px;
+ /* スマホ用CSS header*/
+  @media screen and ( max-width:767px ){
+    .header{
+      height: 60px;
+    }
+
+    .header__logo img{
+      width: 50px;
+      height: 50px;
+    }
+    .header__title{
+      font-size: 2rem;
+      margin: 10px;
+      padding: 0;
+    }
+    .header__list{
+      float: none;
+      display: none;
+      height: 100px;
+    }
+    .humberger-menu-buttom {
+      display: block;
+      img{
+        float: right;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 20px;
+        right: 10px;
+      }
+    }
+    .global-navigation{
+      position: fixed;
+      display: block;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      background-color:skyblue;
+      transform:translateY(-100%);
+      transition:0.6s;
+      width: 100%;
+      &-list{
+        position: relative;
+        height: 100vh;
+        padding: 15% 10%;
+        li{
+          font-size: 1em;
+          text-align: center;
+          margin-top: 20px;
+          list-style: none;
+          padding-bottom: 15px;
+          float: none;
+          border-bottom: 1px solid #333;
         }
       }
-      .active{
-        transform:translateY(0%);
-      }
+      &-close-buttom{
+        position: absolute;
+        top: 20px;
+        right: 10px;
+        img{
+          width: 30px;
+          height: 30px;
         }
+      }
+    }
+  .active{
+    transform:translateY(0%);
+  }
+  }
         /* header END*/
 
 .contents{
@@ -136,42 +202,44 @@ body{
     transform:rotate(-10deg);
   }
 }
-      /* スマホ用CSS */
-        @media screen and (max-width: 767px){
-          .contents{
-            height: 300px;
-            background:linear-gradient(rgba(#fff, 0.5), rgba(#fff, 0.6)),url("/assets/sign.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-            width: 100%;
-            &__title{
-              font-size: 70px;
-              display: inline-block;
-            }
-            &__subtitle{
-              display: inline-block;
-              font-size:20px;
-              white-space: nowrap;
-            }
-            .title-wrapper{
-              width: auto;
-              top: 50%;
-              right: 50%;
-              transform:translate(50%, -50%);
-            }
-          }
-        }
+  /* スマホ用CSS */
+  @media screen and (max-width: 767px){
+    .contents{
+      height: 300px;
+      background:linear-gradient(rgba(#fff, 0.5), rgba(#fff, 0.6)),url("/assets/sign.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+      width: 100%;
+      &__title{
+        font-size: 70px;
+        display: inline-block;
+      }
+      &__subtitle{
+        display: inline-block;
+        font-size:20px;
+        white-space: nowrap;
+      }
+    .title-wrapper{
+      width: auto;
+      top: 50%;
+      right: 50%;
+      transform:translate(50%, -50%);
+    }
+    }
+  }
 
 .news{
   float: left;
   padding: 30px;
-  font-size: 20px;
+  font-size: 23px;
   width: 50%;
   box-sizing:border-box;
   &__title{
+    font-size: 30px;
     text-align: center;
     text-decoration:underline;
+    padding: 20px;
   }
   &__list{
     margin:0 auto;
@@ -180,35 +248,48 @@ body{
     text-align: center;
     letter-spacing:1px;
   }
+  th{
+    padding: 10px;
+  }
 }
-      // スマホ用css
-      @media screen and (max-width: 767px){
-        .news{
-          float: none;
-          width: 100%;
-          padding: 15px;
-        }
+  // スマホ用css
+  @media screen and (max-width: 767px){
+    .news{
+      float: none;
+      width: 100%;
+      padding: 15px;
+      font-size: 15px;
+      line-height:30px;
+      &__title{
+        font-size: 20px;
       }
+    }
+  }
 
 .introduce{
   padding: 30px;
   box-sizing:border-box;
-  font-size: 20px;
+  font-size: 23px;
   float: left;
   width: 50%;
   &__title{
+    font-size: 30px;
+    padding: 20px;
     text-align: center;
     text-decoration:underline;
   }
 }
-        // スマホ用css
-        @media screen and (max-width: 767px){
-          .introduce{
-            float: none;
-            width: 100%;
-            padding: 15px;
-          }
-        }
-
-}
+  // スマホ用css
+  @media screen and (max-width: 767px){
+    .introduce{
+      float: none;
+      width: 100%;
+      padding: 25px;
+      font-size: 15px;
+      line-height: 30px;
+    &__title{
+      font-size: 20px;
+    }
+    }
+  }
 
