--- a/app/views/inpulse/index.html.erb
+++ b/app/views/inpulse/index.html.erb
@@ -1,10 +1,12 @@
-<header class="clearfix" id="clearfix">
+<header class=" header clearfix" id="clearfix">
+  <div class="header-sentence">
     <div class="header__logo">
       <img src="assets/ball.jpg">
     </div>
     <div class="header__title">
       Inpulse
     </div>
+  </div>
     <div class="humberger-menu-buttom">
       <img src="assets/menu-aicon.png">
     </div>
@@ -44,7 +46,7 @@
 <div class= "clearfix">
   <article class="news">
     <div class="news__title">
-      <h1>News</h1>
+      News
     </div>
       <table class="news__list">
         <thead>
@@ -73,7 +75,7 @@
 
   <section class="introduce">
     <div class="introduce__title">
-      <h1>紹介</h1>
+      紹介
     </div>
     <div class="introduce__comment">
       <p>コメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメントコメント</p>
